--- a/app/src/main/res/layout/item_list_row_sp.xml
+++ b/app/src/main/res/layout/item_list_row_sp.xml
@@ -18,16 +18,37 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/tvViagemModelo"
+                android:id="@+id/tvSpNome"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:textColor="#000"
-                android:text="Viagem"/>
+                android:text="Nome"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/tvViagemData"
-                android:text="Data"/>
+                android:id="@+id/tvSpEndereco"
+                android:text="Endereco"/>
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:orientation="vertical"
+            android:layout_marginLeft="260dp">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="Presente"
+                android:id="@+id/bPresente"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="Ausente"
+                android:id="@+id/bAusente"/>
+        </LinearLayout>
+
+
     </androidx.cardview.widget.CardView>
 </LinearLayout>
