--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -4,17 +4,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:padding="16dp"
     tools:context=".view.MenuFragment">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Deseja: "
-        android:id="@+id/tvMenuSaudacao"/>
+        android:id="@+id/tvMenuSaudacao"
+        android:textSize="18sp"
+        android:layout_gravity="center_horizontal"
+        android:paddingTop="300dp"/>
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Minhas Viagens"
-        android:id="@+id/bMenuViagens"/>
-
+        android:id="@+id/bMenuViagens"
+        android:backgroundTint="@color/green"
+        android:textColor="@android:color/white"/>
 </LinearLayout>
