--- a/app/src/main/res/layout/item_list_row.xml
+++ b/app/src/main/res/layout/item_list_row.xml
@@ -3,31 +3,48 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:padding="8dp"
+    android:background="@drawable/rounded_corner"
+    android:layout_margin="8dp">
+
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="4dp"
-        app:cardElevation="6dp"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="4dp"
         app:cardUseCompatPadding="true">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="8dp"
+            android:padding="16dp"
             android:orientation="vertical">
+
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/tvViagemModelo"
-                android:textSize="16sp"
+                android:id="@+id/tvViagemDestino"
+                android:textSize="18sp"
                 android:textStyle="bold"
-                android:textColor="#000"
-                android:text="Viagem"/>
+                android:textColor="@android:color/black"
+                android:text="Destino da Viagem"/>
+
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/tvViagemData"
-                android:text="Data"/>
+                android:textSize="14sp"
+                android:textColor="@android:color/darker_gray"
+                android:text="Data da Viagem"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/tvViagemStatus"
+                android:textSize="14sp"
+                android:textColor="@color/green"
+                android:text="Status da Viagem"/>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
