--- a/app/src/main/res/layout/fragment_splashscreen.xml
+++ b/app/src/main/res/layout/fragment_splashscreen.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -17,8 +16,6 @@
         android:textStyle="bold" />
 
     <!-- Subtítulo -->
-
-    <!-- Footer com botão Login -->
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -29,6 +26,7 @@
         android:textColor="@android:color/white"
         android:textSize="20sp" />
 
+    <!-- Footer com botão Login -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="120dp"
@@ -49,7 +47,6 @@
             android:elevation="0dp"
             android:stateListAnimator="@null"
             android:layout_margin="8dp"
-            android:padding="12dp"
-            />
+            android:padding="12dp" />
     </LinearLayout>
 </RelativeLayout>
