--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="green">#398D62</color>
     <color name="dark_gray">#4B4B4B</color>
+    <color name="gray">#3C3C3C</color>
 </resources>
