--- a/app/src/main/res/layout/fragment_acompanha_viagem.xml
+++ b/app/src/main/res/layout/fragment_acompanha_viagem.xml
@@ -122,16 +122,29 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvVisualizaPassageiros"
         android:layout_width="match_parent"
-        android:layout_height="371dp"
+        android:layout_height="308dp"
         android:scrollbars="vertical"
         tools:listitem="@layout/item_list_row_sp" />
 
     <Button
         android:id="@+id/voltar"
-        android:layout_width="match_parent"
-        android:layout_height="57dp"
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
+        android:layout_gravity="center"
+        android:backgroundTint="@color/green"
+        android:drawableLeft="@drawable/rounded_corner"
+        android:drawablePadding="10dp"
+        android:gravity="center"
         android:text="Voltar"
-        android:background="@color/dark_gray"/>
+        android:textColor="@android:color/white"
+        android:textSize="12sp"
+        android:paddingLeft="24dp"
+        android:paddingRight="24dp"
+        android:layout_marginTop="-20dp"
+        android:layout_marginBottom="16dp"
+        android:elevation="2dp"
+        />
+
 
 
 </LinearLayout>
