--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -22,4 +22,21 @@
         android:id="@+id/bMenuViagens"
         android:backgroundTint="@color/green"
         android:textColor="@android:color/white"/>
+
+    <Button
+        android:id="@+id/voltar"
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
+        android:layout_gravity="center"
+        android:backgroundTint="@color/green"
+        android:drawableLeft="@drawable/rounded_corner"
+        android:drawablePadding="10dp"
+        android:layout_marginTop="230dp"
+        android:paddingLeft="24dp"
+        android:paddingRight="24dp"
+        android:elevation="2dp"
+        android:gravity="center"
+        android:text="Voltar"
+        android:textColor="@android:color/white"
+        android:textSize="12sp" />
 </LinearLayout>
