--- a/app/src/main/res/layout/fragment_visualizacao_viagem.xml
+++ b/app/src/main/res/layout/fragment_visualizacao_viagem.xml
@@ -29,9 +29,28 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvVisualizaViagens"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scrollbars="vertical"
+        android:layout_width="377dp"
+        android:layout_height="498dp"
         android:layout_below="@id/tvSubtitulo"
-        tools:listitem="@layout/item_list_row"/>
+        android:scrollbars="vertical"
+        tools:listitem="@layout/item_list_row" />
+
+    <Button
+        android:id="@+id/voltar"
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="630dp"
+        android:backgroundTint="@color/green"
+        android:drawableLeft="@drawable/rounded_corner"
+        android:drawablePadding="10dp"
+        android:elevation="2dp"
+        android:gravity="center"
+        android:paddingLeft="24dp"
+        android:padding="12dp"
+        android:paddingRight="24dp"
+        android:layout_centerHorizontal="true"
+        android:text="Voltar"
+        android:textColor="@android:color/white"
+        android:textSize="12sp" />
 </RelativeLayout>
