--- a/app/src/main/res/layout/item_list_row_sp.xml
+++ b/app/src/main/res/layout/item_list_row_sp.xml
@@ -37,7 +37,41 @@
                 android:textSize="14sp"
                 android:textColor="@android:color/darker_gray"
                 android:text="Endereço do Passageiro"/>
+            <TextView
+                android:id="@+id/tvSpStatus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                android:textColor="@android:color/holo_green_dark"
+                android:text="Status"/>
 
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="16dp"
+            android:layout_marginLeft="220dp"
+            android:orientation="vertical">
+            <Button
+                android:id="@+id/bPresente"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Presente"
+                android:backgroundTint="@color/green"
+                android:textColor="@android:color/white"
+                android:layout_marginEnd="8dp"/>
+            <Button
+                android:id="@+id/bAusente"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Ausente"
+                android:backgroundTint="@color/green"
+                android:textColor="@android:color/white"/>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
