--- a/app/src/main/res/layout/fragment_visualizacao_viagem_passageiro.xml
+++ b/app/src/main/res/layout/fragment_visualizacao_viagem_passageiro.xml
@@ -5,7 +5,24 @@
     android:layout_height="match_parent"
     android:padding="16dp"
     tools:context=".view.VisualizacaoViagemPassageiroFragment">
-
+    <Button
+        android:id="@+id/voltar"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        android:backgroundTint="@color/green"
+        android:drawableLeft="@drawable/rounded_corner"
+        android:drawablePadding="10dp"
+        android:elevation="2dp"
+        android:gravity="center"
+        android:paddingLeft="24dp"
+        android:padding="4dp"
+        android:paddingRight="24dp"
+        android:layout_centerHorizontal="false"
+        android:text="Voltar"
+        android:textColor="@android:color/white"
+        android:textSize="12sp" />
     <TextView
         android:id="@+id/tvTitulo"
         android:layout_width="wrap_content"
@@ -35,22 +52,5 @@
         android:scrollbars="vertical"
         tools:listitem="@layout/item_list_row" />
 
-    <Button
-        android:id="@+id/voltar"
-        android:layout_width="wrap_content"
-        android:layout_height="60dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="630dp"
-        android:backgroundTint="@color/green"
-        android:drawableLeft="@drawable/rounded_corner"
-        android:drawablePadding="10dp"
-        android:elevation="2dp"
-        android:gravity="center"
-        android:paddingLeft="24dp"
-        android:padding="12dp"
-        android:paddingRight="24dp"
-        android:layout_centerHorizontal="true"
-        android:text="Voltar"
-        android:textColor="@android:color/white"
-        android:textSize="12sp" />
+
 </RelativeLayout>
