--- a/app/src/main/res/layout/fragment_acompanha_viagem_passageiro.xml
+++ b/app/src/main/res/layout/fragment_acompanha_viagem_passageiro.xml
@@ -5,8 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".view.AcompanhaViagemFragment">
-
+    tools:context=".view.AcompanhaViagemPassageiroFragment">
     <Button
         android:id="@+id/voltar"
         android:layout_width="wrap_content"
@@ -86,6 +85,7 @@
             android:textColor="@android:color/black"/>
 
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -107,34 +107,7 @@
             android:textSize="18sp"
             android:textColor="@android:color/black"
             android:layout_marginBottom="16dp"/>
-    </LinearLayout>
 
-    <!-- Botões Iniciar e Finalizar -->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center"
-        android:layout_marginBottom="16dp">
-
-        <Button
-            android:id="@+id/bIniciar"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Iniciar"
-            android:backgroundTint="@color/green"
-            android:textColor="@android:color/white"
-            android:layout_marginEnd="8dp"/>
-
-        <Button
-            android:id="@+id/bFinalizar"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Finalizar"
-            android:backgroundTint="@color/green"
-            android:textColor="@android:color/white"/>
     </LinearLayout>
 
     <!-- Título Passageiros -->
