--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="green">#398D62</color>
     <color name="dark_gray">#4B4B4B</color>
     <color name="gray">#3C3C3C</color>
+    <color name="red">#FF0000</color>
 </resources>
