--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,19 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.MainActivity">
+    tools:context="com.example.vaievemclientemobile.view.MainActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/Theme.BikeShopClienteMobile.AppBarOverlay">
+        android:theme="@style/Theme.VaiEVemClienteMobile.AppBarOverlay">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="@color/green"
-            app:popupTheme="@style/Theme.BikeShopClienteMobile.PopupOverlay" />
+            app:popupTheme="@style/Theme.VaiEVemClienteMobile.PopupOverlay" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
